Додавання віджету(дата+подія) на головний екран

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,9 @@
         <item>days</item>
     </string-array>
     <string name="default_notification_sound">Default Notification Sound</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
 
 
 </resources>
