Налаштування в додатку увімкнення і вимкнення сповіщень

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -89,4 +89,5 @@
     <string name="oct">Жовт.</string>
     <string name="nov">Листоп.</string>
     <string name="dec">Груд.</string>
+    <string name="ukrainianholidays">Свята України</string>
 </resources>
