--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
 
     <!--Setting-->
     <string name="change">Change</string>
+    <string name="ukrainianholidays">Ukrainian Holidays</string>
+
     <string name="setting">SETTINGS</string>
     <string name="default_reminder_time">Default Reminder Time</string>
     <string-array name="date_array">
@@ -121,9 +123,6 @@
         <item>days</item>
     </string-array>
     <string name="default_notification_sound">Default Notification Sound</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
-    <string name="app_widget_description">This is an app widget description</string>
 
 
 </resources>
